Updates: - Reset password

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -395,3 +395,15 @@ a:focus{
   }
 
 }
+
+.form-input.error{
+  box-shadow: 0 0 15px red !important;
+}
+.error-message{
+  display: block;
+  padding: 5px 0;
+  color: red;
+  font-style: italic;
+  font-size: 11px;
+  margin-bottom: 5px;
+}
