Updates: - Page user profile

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -12,6 +12,19 @@ body{
   padding-bottom: 542px;
   position: relative;
   margin: 0;
+
+  &:before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    opacity: 0.3;
+  }
 }
 h2, h1, h3{
   font-family: $fontTitle;
@@ -370,7 +383,8 @@ a:focus{
   }
 }
 
-#reset-password-form{
+#reset-password-form,
+.user-profile-form{
   padding: 0 0 100px;
 
   .form-input{
@@ -394,6 +408,9 @@ a:focus{
     }
   }
 
+}
+.user-profile-form{
+  padding-bottom: 20px;
 }
 
 .form-input.error{
