--- a/src/css/style.css
+++ b/src/css/style.css
@@ -176,6 +176,17 @@ body {
   padding-bottom: 542px;
   position: relative;
   margin: 0; }
+  body:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    opacity: 0.3; }
 
 h2, h1, h3 {
   font-family: "deliusregular", sans-serif; }
@@ -506,15 +517,18 @@ a:focus {
       color: #fff;
       border-color: #fff; }
 
-#reset-password-form {
+#reset-password-form,
+.user-profile-form {
   padding: 0 0 100px; }
-  #reset-password-form .form-input {
+  #reset-password-form .form-input,
+  .user-profile-form .form-input {
     display: block;
     width: 100%;
     margin-bottom: 5px;
     padding: 10px;
     border: solid 3px #f2f2f2; }
-  #reset-password-form .submit-button {
+  #reset-password-form .submit-button,
+  .user-profile-form .submit-button {
     display: block;
     width: 100%;
     padding: 15px;
@@ -525,8 +539,12 @@ a:focus {
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
-    #reset-password-form .submit-button:hover {
+    #reset-password-form .submit-button:hover,
+    .user-profile-form .submit-button:hover {
       background-color: #6398c8; }
+
+.user-profile-form {
+  padding-bottom: 20px; }
 
 .form-input.error {
   box-shadow: 0 0 15px red !important; }
