--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -428,3 +428,9 @@ a:focus{
   font-size: 11px;
   margin-bottom: 5px;
 }
+.no-result{
+  padding: 40px 15px;
+  background: #f8f8f8;
+  font-style: italic;
+  margin: 20px 0;
+}
