--- a/src/css/_carousel.scss
+++ b/src/css/_carousel.scss
@@ -29,8 +29,8 @@
         padding: 0;
         width: 90%;
         left: 50%;
-        top: 50%;
-        @include transform(translate(-50%,-50%));
+        top: 10px;
+        @include transform(translate(-50%,0));
       }
     }
   }
