--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -1,3 +1,6 @@
+:root{
+  --font-size: 17px;
+}
 .login-registration-forms{
   padding-bottom: 100px;
   form{
@@ -24,6 +27,7 @@
         display: block;
         width: 100%;
         padding: 10px;
+        font-size: var(--font-size);
         border: solid 2px $light_gray;
       }
     }
