--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -302,7 +302,8 @@ header.fixed{
     }
   }
 }
-.nav-login-button{
+.nav-login-button,
+.nav-logout-button{
   display: inline-block;
   padding: 5px 10px 5px 30px !important;
   color: $gray;
@@ -315,5 +316,18 @@ header.fixed{
     position: absolute;
     left: 10px;
     @include centerVertical;
+  }
+}
+
+.nav-logout-button{
+  background-color: #f8f8f8;
+  display: inline-block !important;
+  &:before{
+    content: '\f011';
+    color: #fff !important;
+    background-color: $orange;
+    padding: 1px 5px;
+    border-radius: 100%;
+    left: 5px;
   }
 }
