Updates: - Bugfixes CSS

--- a/src/css/_articles.scss
+++ b/src/css/_articles.scss
@@ -110,10 +110,9 @@
 
   li{
     display: inline-block;
-    margin-right: 15px;
-    flex-grow: 1;
-    width: 0;
-    box-shadow: 0 0 8px #e5e5e5;
+    width: 32%;
+    margin-right: 2%;
+    box-shadow: 0 1px 3px #e5e5e5;
 
     &:last-child{
       margin-right: 0;
@@ -382,15 +381,11 @@
 
   h2,
   h1{
-    margin-top: 50px;
-
-    &:first-of-type{
-      margin-top: 20px;
-    }
+    margin: 50px 0 25px;
   }
 
   h3{
-    margin-top: 40px;
+    margin: 40px 0 25px;
   }
 }
 
