--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -10,6 +10,11 @@ label{
   font-weight: normal;
   cursor: pointer;
 }
+
+img{
+  position: relative;
+  max-width: 100%;
+}
 body{
   color: #50585C;
   min-height: 100%;
