--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,6 +174,10 @@ label {
   font-weight: normal;
   cursor: pointer; }
 
+img {
+  position: relative;
+  max-width: 100%; }
+
 body {
   color: #50585C;
   min-height: 100%;
@@ -1176,10 +1180,9 @@ footer {
   margin-bottom: 40px; }
   .suggestion-list li {
     display: inline-block;
-    margin-right: 15px;
-    flex-grow: 1;
-    width: 0;
-    box-shadow: 0 0 8px #e5e5e5; }
+    width: 32%;
+    margin-right: 2%;
+    box-shadow: 0 1px 3px #e5e5e5; }
     .suggestion-list li:last-child {
       margin-right: 0; }
     .suggestion-list li .list-item {
@@ -1392,12 +1395,9 @@ footer {
   margin-bottom: 50px; }
   .article-body h2,
   .article-body h1 {
-    margin-top: 50px; }
-    .article-body h2:first-of-type,
-    .article-body h1:first-of-type {
-      margin-top: 20px; }
+    margin: 50px 0 25px; }
   .article-body h3 {
-    margin-top: 40px; }
+    margin: 40px 0 25px; }
 
 .formulaire-photos {
   padding: 20px;
