--- a/src/css/_articles.scss
+++ b/src/css/_articles.scss
@@ -379,13 +379,17 @@
 .article-body{
   margin-bottom: 50px;
 
+  h3,
   h2,
   h1{
-    margin: 50px 0 25px;
+    margin: 50px 0 30px;
   }
 
-  h3{
-    margin: 40px 0 25px;
+  p{
+    img{
+      display: block;
+      margin: 0 auto;
+    }
   }
 }
 
