--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -35,6 +35,12 @@ body{
     opacity: 0.4;
   }
 }
+blockquote{
+  font-family: $fontTitle;
+  font-size: 22px;
+  margin: 80px 0;
+  color: #60655b;
+}
 h2, h1, h3{
   font-family: $fontTitle;
 }
