--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1877,6 +1877,44 @@ div.zabuto_calendar .badge-event {
 .contact-info .email:before {
   content: '\f0e0'; }
 
+#myModal {
+  text-align: center; }
+  #myModal .modal-header {
+    background: none;
+    border: none; }
+  #myModal .modal-footer {
+    background: none;
+    text-align: inherit; }
+  #myModal .modal-dialog {
+    background-color: #fff; }
+    #myModal .modal-dialog:after {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      content: '';
+      display: block;
+      background: url("../img/mother.jpg");
+      background-size: cover;
+      background-position: top center;
+      z-index: 0; }
+  #myModal .modal-content {
+    padding: 100px;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.9); }
+  #myModal h2 {
+    font-size: 45px;
+    margin-bottom: 40px;
+    color: #89b1d5; }
+  #myModal p {
+    font-size: 18px; }
+  #myModal .btn {
+    font-family: "deliusregular", sans-serif;
+    font-size: 20px;
+    padding: 10px 40px;
+    border-radius: 3px; }
+
 :root {
   --font-size: 17px; }
 
