--- a/src/css/_modale.scss
+++ b/src/css/_modale.scss
@@ -1,5 +1,6 @@
 #myModal{
   text-align: center;
+
    .modal-header{
      background: none;
      border: none;
@@ -8,26 +9,16 @@
     background: none;
     text-align: inherit;
   }
-  .modal-dialog{
-    background-color: #fff;
-    &:after{
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      content: '';
-      display: block;
-      background: url("../img/mother.jpg");
-      background-size: cover;
-      background-position: top center;
-      z-index: 0;
-    }
+  .cover-image{
+    height: 400px;
+    width: 100%;background: url("../img/mother.jpg");
+    background-size: cover;
+    background-position: center center;
   }
   .modal-content{
-    padding: 100px;
+    padding: 40px;
     z-index: 1;
-    background-color: rgba(#fff, 0.90);
+    background-color: #fff;
   }
   h2{
     font-size: 45px;
@@ -43,5 +34,13 @@
     font-size: 20px;
     padding: 10px 40px;
     border-radius: 3px;
+  }
+
+  //Modal positionning
+  .modal.in .modal-dialog{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    @include transform(translate(-50%,-50%));
   }
  }
