--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1885,24 +1885,16 @@ div.zabuto_calendar .badge-event {
   #myModal .modal-footer {
     background: none;
     text-align: inherit; }
-  #myModal .modal-dialog {
-    background-color: #fff; }
-    #myModal .modal-dialog:after {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      content: '';
-      display: block;
-      background: url("../img/mother.jpg");
-      background-size: cover;
-      background-position: top center;
-      z-index: 0; }
+  #myModal .cover-image {
+    height: 400px;
+    width: 100%;
+    background: url("../img/mother.jpg");
+    background-size: cover;
+    background-position: center center; }
   #myModal .modal-content {
-    padding: 100px;
+    padding: 40px;
     z-index: 1;
-    background-color: rgba(255, 255, 255, 0.9); }
+    background-color: #fff; }
   #myModal h2 {
     font-size: 45px;
     margin-bottom: 40px;
@@ -1914,6 +1906,15 @@ div.zabuto_calendar .badge-event {
     font-size: 20px;
     padding: 10px 40px;
     border-radius: 3px; }
+  #myModal .modal.in .modal-dialog {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
 
 :root {
   --font-size: 17px; }
