--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1905,9 +1905,11 @@ div.zabuto_calendar .badge-event {
     font-family: "deliusregular", sans-serif;
     font-size: 20px;
     padding: 10px 40px;
-    border-radius: 3px; }
-  #myModal .modal.in .modal-dialog {
+    border-radius: 3px;
+    margin: 0; }
+  #myModal .modal-dialog {
     position: absolute;
+    margin: 0;
     left: 50%;
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -2099,7 +2101,22 @@ div.zabuto_calendar .badge-event {
     .articles .article .img-frame {
       height: 200px; }
     .articles .article .title {
-      margin: 15px 0; } }
+      margin: 15px 0; }
+
+  #myModal .cover-image {
+    height: 200px; }
+  #myModal .modal-content {
+    padding: 15px; }
+  #myModal h2 {
+    font-size: 30px;
+    margin-bottom: 20px; }
+  #myModal p {
+    font-size: 14px; }
+  #myModal .btn {
+    font-family: "deliusregular", sans-serif;
+    font-size: 16px; }
+  #myModal .modal-dialog {
+    width: 92%; } }
 @media (max-width: 768px) {
   body {
     padding-bottom: 430px; }
