--- a/src/css/_annuaire.scss
+++ b/src/css/_annuaire.scss
@@ -21,6 +21,67 @@
     font-size: 15px;
     box-shadow: 0 0 5px rgba($gray,0.2),0 5px 5px $light_gray;
 
+    .contact-info{
+      margin-bottom: 8px;
+    }
+    .info-col{
+      display: inline-block;
+      margin-right: 10px;
+      &:last-child{
+        margin-right: 0;
+      }
+    }
+
+    .popup-galery{
+      a{
+        display: block;
+        position: relative;
+        z-index: 0;
+        margin-bottom: 8px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+        &:hover:before{
+          display: block;
+          content: '';
+          width: 100%;
+          height: 100%;
+          background-color: rgba(#000, 0.4);
+          position: absolute;
+          z-index: 1;
+          left: 0;
+          top: 0;
+        }
+        &:hover:after{
+          display: block;
+          opacity: 0.6;
+          content: '\f00e';
+          font-family: FontAwesome, sans-serif;
+          font-size: 40px;
+          width: 40px;
+          height: 40px;
+          color: #fff;
+          position: absolute;
+          z-index: 2;
+          left: 50%;
+          top: 50%;
+          @include transform(translate(-50%,-50%));
+        }
+      }
+    }
+
+    .tag{
+      display: inline-block;
+      background-color: #f8f8f8;
+      padding: 5px;
+      margin-right: 5px;
+      margin-bottom: 5px;
+
+      &:last-child{
+        margin-right: 0;
+      }
+    }
+
     h4{
       font-family: $fontTitle;
       color: $orange;
