--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1694,6 +1694,56 @@ div.zabuto_calendar .badge-event {
   font-family: "Open Sans", sans-serif;
   font-size: 15px;
   box-shadow: 0 0 5px rgba(92, 100, 104, 0.2), 0 5px 5px #f2f2f2; }
+  .liste-etablissements .etablissement .contact-info {
+    margin-bottom: 8px; }
+  .liste-etablissements .etablissement .info-col {
+    display: inline-block;
+    margin-right: 10px; }
+    .liste-etablissements .etablissement .info-col:last-child {
+      margin-right: 0; }
+  .liste-etablissements .etablissement .popup-galery a {
+    display: block;
+    position: relative;
+    z-index: 0;
+    margin-bottom: 8px; }
+    .liste-etablissements .etablissement .popup-galery a:last-child {
+      margin-bottom: 0; }
+    .liste-etablissements .etablissement .popup-galery a:hover:before {
+      display: block;
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      position: absolute;
+      z-index: 1;
+      left: 0;
+      top: 0; }
+    .liste-etablissements .etablissement .popup-galery a:hover:after {
+      display: block;
+      opacity: 0.6;
+      content: '\f00e';
+      font-family: FontAwesome, sans-serif;
+      font-size: 40px;
+      width: 40px;
+      height: 40px;
+      color: #fff;
+      position: absolute;
+      z-index: 2;
+      left: 50%;
+      top: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+  .liste-etablissements .etablissement .tag {
+    display: inline-block;
+    background-color: #f8f8f8;
+    padding: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px; }
+    .liste-etablissements .etablissement .tag:last-child {
+      margin-right: 0; }
   .liste-etablissements .etablissement h4 {
     font-family: "deliusregular", sans-serif;
     color: #f39383;
